[gd_scene load_steps=5 format=2]

[ext_resource path="res://sprites/spr_cuadrado_0.png" type="Texture" id=1]
[ext_resource path="res://escenas/enemy/basics/sq.gd" type="Script" id=2]
[ext_resource path="res://escenas/enemy/basics/bulletSquare.tscn" type="PackedScene" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 12.7123, 13.3526 )

[node name="sq" type="Area2D" groups=[
"enemy",
]]
position = Vector2( 48.4145, 28.9063 )
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}
BulletScene = ExtResource( 3 )

[node name="spr_sq" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="bulletPosition" type="Position2D" parent="spr_sq"]
position = Vector2( 26.628, 0 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Timer" type="Timer" parent="."]
wait_time = 1.641
[connection signal="body_entered" from="." to="." method="_on_sq_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_sq_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
